syntax = "proto3";

package sortedchat;

option go_package = "sortedstartup/paymentservice/proto";

enum Currency {
    USD = 0;
    INR = 1;
}

enum PaymentType {
    RECURRING = 0;
    ONE_TIME = 1;
}

enum Interval {
    WEEK = 0;
    MONTH = 1;
    QUARTER = 2; //stripe does not support quarterly, so we use monthly with count 3
    YEAR = 3;
}

service PaymentService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc CreateStripeCheckoutSession(CreateStripeCheckoutSessionRequest) returns (CreateStripeCheckoutSessionResponse);
    rpc CreateRazorpayCheckoutSession(CreateRazorpayCheckoutSessionRequest) returns (CreateRazorpayCheckoutSessionResponse);
    rpc CreateStripeSubscriptionCheckoutSession(CreateStripeSubscriptionCheckoutSessionRequest) returns (CreateStripeSubscriptionCheckoutSessionResponse);
    rpc CreateRazorpaySubscriptionCheckoutSession(CreateRazorpaySubscriptionCheckoutSessionRequest) returns (CreateRazorpaySubscriptionCheckoutSessionResponse);
    rpc CheckUserProductAccess(CheckUserProductAccessRequest) returns (CheckUserProductAccessResponse);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    int64 amount_in_smallest_unit = 3;
    Currency currency = 4;
    PaymentType payment_type = 5;
    int64 interval_count = 6;
    Interval interval = 7;
}

message CreateProductResponse {
    string id = 1;
    string message = 2;
}

message ListProductsRequest {
}

message ListProductsResponse {
    repeated Product products = 1;
}

message Product {
    string id = 1;
    string stripe_product_id = 2;
    string razorpay_product_id = 3;
    string name = 4;
    int64 amount_in_smallest_unit = 5;
    string description = 6;
    Currency currency = 7;
    bool is_recurring = 8;
    int64 interval_count = 9;
    string interval_period = 10;
    bool has_access = 11;
}

message CreateStripeCheckoutSessionRequest {
    string product_id = 1;
}

message CreateStripeCheckoutSessionResponse {
    string session_url = 1;
}

message CreateRazorpayCheckoutSessionRequest {
    string product_id = 1;
}

message CreateRazorpayCheckoutSessionResponse {
    string order_id = 1;
    int64 amount = 2;
    string currency = 3;
}

message CreateStripeSubscriptionCheckoutSessionRequest {
    string product_id = 1;
}

message CreateStripeSubscriptionCheckoutSessionResponse {
    string session_url = 1;
}

message CreateRazorpaySubscriptionCheckoutSessionRequest {
    string product_id = 1;
}

message CreateRazorpaySubscriptionCheckoutSessionResponse {
    string subscription_id = 1;
    int64 amount = 2;
    string currency = 3;
}

message CheckUserProductAccessRequest {
    string product_id = 1;
}

message CheckUserProductAccessResponse {
    bool has_access = 1;
}